// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Headline renders correctly 1`] = `
.c0 {
  font-size: 3.272rem;
  font-weight: 900;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1.0;
  margin-bottom: 2.074rem;
  margin-top: 4.3rem;
}

<h1
  class="c0"
>
  Headline
</h1>
`;

exports[`Typography Paragraph renders correctly 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1.6;
  margin-bottom: 2.488rem;
  margin-top: 0;
}

<p
  class="c0"
>
  Lorem ipsum dolor amet shoreditch tbh butcher 90's portland, keytar street art. Pork belly you probably haven't heard of them ethical post-ironic hella, cray kale chips fashion axe chillwave shabby chic man bun slow-carb unicorn. Live-edge intelligentsia tumblr quinoa man braid. Hexagon disrupt echo park brunch direct trade four dollar toast chartreuse, drinking vinegar wolf bushwick pork belly. Vexillologist sartorial literally venmo blog. Tumblr you probably haven't heard of them bitters swag waistcoat af. Deep v helvetica blog, paleo cardigan seitan kombucha normcore.
</p>
`;

exports[`Typography Subline renders correctly 1`] = `
.c0 {
  font-size: 2.023rem;
  font-weight: 900;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1.0;
  margin-bottom: 1.728rem;
  margin-top: 4.3rem;
}

<h2
  class="c0"
>
  Subline
</h2>
`;

exports[`Typography Title renders correctly 1`] = `
.c0 {
  font-size: 5.295rem;
  font-weight: 900;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 1.0;
  margin-bottom: 2.986rem;
  margin-top: 0.694rem;
}

<h1
  class="c0"
>
  Title
</h1>
`;
